deployment2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temp-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: temp-ns
  name: temp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: temp
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: temp
    spec:
      containers:
      - image: 905418202800.dkr.ecr.ap-south-1.amazonaws.com/temp:latest
        imagePullPolicy: Always
        name: temp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: temp-ns
  name: temp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: temp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: temp-ns
  name: temp-ing
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: temp
              port:
                number: 80
